--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+.chartContainer canvas {
+    max-height: 250px;
+    width: auto;
+}
+
+.chartContainer{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
